# MRP-ITLeiria

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  common.c  decmrp.c  encmrp.c  entropy_coding.c  hi-mrp-example.cfg  makefile  mrp.h  mrp_config.h  mrp_config.h.in  rc.c
MRP-Video/: .cproject  .project  biblioteca_projeto_2013.c  biblioteca_projeto_2013.h  common.c  decmrp.c  encmrp.c  makefile  mrp.h  rc.c
